tgthrProgramManagement/force-app/main/default/objects/ICD10_Code__mdt/ICD10_Code__mdt.object-meta.xml
<CustomObject>
    <label>ICD-10 Code</label>
    <pluralLabel>ICD-10 Codes</pluralLabel>
    <description>ICD-10 diagnosis codes with hierarchical structure. Parent codes have children that must be selected for billable specificity.</description>
</CustomObject>