tgthrProgramManagement/force-app/main/default/objects/ICD10_Code__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>High-level category grouping (e.g., Mental Disorders, Respiratory, etc.)</description>
    <label>Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>