tgthrProgramManagement/force-app/main/default/objects/ICD10_Code__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The ICD-10 code value (e.g., F03.91). This is the billable code.</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>