tgthrProgramManagement/force-app/main/default/objects/ICD10_Code__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Full text description of this ICD-10 code.</description>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>