tgthrProgramManagement/force-app/main/default/objects/ICD10_Code__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this code is currently active and available for selection.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>