tgthrProgramManagement/force-app/main/default/objects/ICD10_Code__mdt/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True if this is a leaf-level code that can be billed. False for header/parent codes that require more specific selection.</description>
    <label>Is Billable</label>
    <type>Checkbox</type>
</CustomField>