tgthrProgramManagement/force-app/main/default/objects/ICD10_Code__mdt/fields/Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Code__c</fullName>
    <description>The parent code value for hierarchical selection. Empty for top-level codes.</description>
    <label>Parent Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>