tgthrProgramManagement/force-app/main/default/objects/ICD10_Code__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Numeric sort order for display within the same level.</description>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>